--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "latest-version": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
-    "rsuite": "^5.33.1",
+    "rsuite": "^5.35.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
