--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "penn-resource",
   "version": "0.1.0",
-  "homepage": "https://Leaemerlyn.github.io/PennResources",
+  "homepage": "",
   "private": true,
   "dependencies": {
     "@rsuite/icons": "^1.0.2",
@@ -19,7 +19,8 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "npm run build && firebase deploy",
+    "deploy-gh-pages": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
