--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "npm run build && firebase deploy",
-    "deploy-gh-pages": "gh-pages -d build",
+    "deploy-gh-pages": "npm run build && gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
