--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "npm run build && firebase deploy",
+    "deploy": "firebase deploy",
     "deploy-gh-pages": "npm run build && gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
